# otus-simple-social-network

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  init_db.py  init_db.sh  main.py  otusSimpleSocialMedia.postman_collection.json  pyproject.toml  requirements.txt
src/: config.py  database.py  main.py  models.py  utils.py
src/cli/: clear.py  initdb.py  populate.py
src/tests/: test_main.py
